Change typeahead.css and morris.css to scss files

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -1,8 +1,8 @@
 @import "_variables.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
 @import "../../fontawesome/scss/font-awesome.scss";
-@import "../../typeahead/typeahead.css";
-@import "../../charts/morris.css";
+@import "../../typeahead/typeahead.scss";
+@import "../../charts/morris.scss";
 @import "../../datetimepicker/_bootstrap-datetimepicker.scss";
 @import "_sb-admin-2.scss";
 @import "_forms.scss";
