--- a/src/pretix/control/templates/pretixcontrol/search/orders.html
+++ b/src/pretix/control/templates/pretixcontrol/search/orders.html
@@ -64,7 +64,7 @@
                     </td>
                     <td>{{ o.event.name }}</td>
                     <td>
-                        {{ o.email }}
+                        {{ o.email|default_if_none:"" }}
                         {% if o.invoice_address.name %}
                             <br>{{ o.invoice_address.name }}
                         {% endif %}
