Order modification page: Make cancel button more useful

--- a/src/pretix/presale/templates/pretixpresale/event/order_modify.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_modify.html
@@ -66,8 +66,8 @@
         <div class="row checkout-button-row">
             <div class="col-md-4">
                 <a class="btn btn-block btn-default btn-lg"
-                        href="{{ view.get_index_url }}">
-                    {% trans "Revert changes" %}
+                        href="{{ view.get_order_url }}">
+                    {% trans "Cancel" %}
                 </a>
             </div>
             <div class="col-md-4 col-md-offset-4">
