--- a/src/pretix/control/templates/pretixcontrol/vouchers/index.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/index.html
@@ -12,24 +12,30 @@
     </p>
     <div class="row filter-form">
         <form class="" action="" method="get">
-            <div class="col-md-3 col-xs-6">
+            <div class="col-md-2 col-xs-6">
                 {% bootstrap_field filter_form.search layout='inline' %}
             </div>
-            <div class="col-md-3 col-xs-6">
+            <div class="col-md-2 col-xs-6">
                 {% bootstrap_field filter_form.tag layout='inline' %}
             </div>
             {% if request.event.has_subevents %}
-                <div class="col-md-2 col-xs-6">
+                <div class="col-md-1 col-xs-6">
                     {% bootstrap_field filter_form.status layout='inline' %}
                 </div>
                 <div class="col-md-2 col-xs-6">
                     {% bootstrap_field filter_form.subevent layout='inline' %}
                 </div>
             {% else %}
-                <div class="col-md-4 col-xs-6">
+                <div class="col-md-3 col-xs-6">
                     {% bootstrap_field filter_form.status layout='inline' %}
                 </div>
             {% endif %}
+            <div class="col-md-2 col-xs-6">
+                {% bootstrap_field filter_form.itemvar layout='inline' %}
+            </div>
+            <div class="col-md-1 col-xs-6">
+                {% bootstrap_field filter_form.qm layout='inline' %}
+            </div>
             <div class="col-md-2 col-xs-6">
                 <button class="btn btn-primary btn-block" type="submit">
                     <span class="fa fa-filter"></span>
