--- a/src/pretix/control/templates/pretixcontrol/subevents/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/detail.html
@@ -152,6 +152,7 @@
                                         {% bootstrap_form_errors form %}
                                         {% bootstrap_field form.all_products layout="control" %}
                                         {% bootstrap_field form.limit_products layout="control" %}
+                                        {% bootstrap_field form.include_pending layout="control" %}
                                     </div>
                                 </div>
                             {% endfor %}
@@ -179,6 +180,7 @@
                                     <div class="panel-body form-horizontal">
                                         {% bootstrap_field cl_formset.empty_form.all_products layout="control" %}
                                         {% bootstrap_field cl_formset.empty_form.limit_products layout="control" %}
+                                        {% bootstrap_field cl_formset.empty_form.include_pending layout="control" %}
                                     </div>
                                 </div>
                             {% endescapescript %}
