--- a/src/pretix/control/templates/pretixcontrol/subevents/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/detail.html
@@ -150,6 +150,7 @@
                                     </div>
                                     <div class="panel-body form-horizontal">
                                         {% bootstrap_form_errors form %}
+                                        {% bootstrap_field form.include_pending layout="control" %}
                                         {% bootstrap_field form.all_products layout="control" %}
                                         {% bootstrap_field form.limit_products layout="control" %}
                                     </div>
@@ -177,6 +178,7 @@
                                         </h4>
                                     </div>
                                     <div class="panel-body form-horizontal">
+                                        {% bootstrap_field cl_formset.empty_form.include_pending layout="control" %}
                                         {% bootstrap_field cl_formset.empty_form.all_products layout="control" %}
                                         {% bootstrap_field cl_formset.empty_form.limit_products layout="control" %}
                                     </div>
