Move to own file

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -15,6 +15,11 @@
 @import "../../select2/select2_bootstrap.scss";
 @import "../../colorpicker/bootstrap-colorpicker.scss";
 
+/* See https://github.com/pretix/pretix/pull/761 */
+.bootstrap-datetimepicker-widget table td span {
+    line-height: 1.8em;
+}
+
 footer {
     text-align: center;
     padding: 10px 0;
