--- a/src/pretix/static/datetimepicker/_bootstrap-datetimepicker.scss
+++ b/src/pretix/static/datetimepicker/_bootstrap-datetimepicker.scss
@@ -300,7 +300,7 @@ $bs-datetimepicker-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
                 display: inline-block;
                 width: 54px;
                 height: 54px;
-                line-height: 1.8em;
+                line-height: 54px;
                 margin: 2px 1.5px;
                 cursor: pointer;
                 border-radius: $bs-datetimepicker-border-radius;
